fix hovering, and text align

--- a/src/components/widgets/PrimaryButton/PrimaryButton.module.css
+++ b/src/components/widgets/PrimaryButton/PrimaryButton.module.css
@@ -1,13 +1,24 @@
 .button_primary {
+  font-size: 1rem;
   min-width: 200px;
+  padding: 1rem 3rem;
   background:  var(--primaryColor);
   border-radius: 6%;
-  padding: 1rem 3rem;
+  cursor: pointer;
+}
+.button_primary:hover {
+  background-color: var(--white);
+  border: 2px solid var(--primaryColor);
 }
 .button_bordered {
-  background-color: var(--white);
+  font-size: 1rem;
+  padding: 1rem 3rem;
   min-width: 200px;
+  background-color: var(--white);
   border: 2px solid var(--primaryColor);
   border-radius: 6%;
-  padding: 1rem 3rem;
+  cursor: pointer;
+}
+.button_bordered:hover {
+  background:  var(--primaryColor);
 }
