--- a/src/pages/StorePage.module.css
+++ b/src/pages/StorePage.module.css
@@ -2,18 +2,17 @@
   width: 100%;
   display: grid;
 }
-.summary {
-  margin: 1rem 0 5rem 0;
-}
+
 .summary h5 {
   margin: .5rem;
-  font-size: 2.8rem;
+  font-size: 3.6rem;
   font-weight: 400;
 }
 
 .summary_display {
-  width: 50%;
-  min-width: 350px;
+  width: 100%;
+  min-width: 370px;
+  max-width: 700px;
   margin: .5rem;
   padding: 3rem;
   background-color: #F9F9F9;
@@ -23,6 +22,10 @@
   display: flex;
   margin: 1rem;
   justify-content: space-between;
+}
+.summary_item span:nth-child(2) {
+  width: 30%;
+  text-align: left;
 }
 .summary_item span {
   margin: .5rem;
@@ -96,4 +99,3 @@
   }
 
 }
-
